[package]
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
categories = ["development-tools::cargo-plugins"]
description = "Navigate to a crate's informative site (homepage, repository, documentation or crates.io)."
keywords = ["cargo", "navigate", "browser", "repository", "homepage"]
name = "cargo-navigate"
documentation = "https://docs.rs/cargo-navigate"
repository = "https://github.com/Enet4/cargo-navigate"
version = "0.1.1"
license = "Apache-2.0/MIT"

[[bin]]
name = "cargo-navigate"
path = "src/main.rs"

[[bin]]
name = "cargo-repo"
path = "src/repo.rs"

[[bin]]
name = "cargo-home"
path = "src/home.rs"

[badges]
travis-ci = { repository = "Enet4/cargo-navigate" }

[dependencies]
clap = "^2.19.2"
hyper = "^0.10.7"
hyper-native-tls = "^0.2.2"
open = "^1.1.1"
serde = "^0.9.3"
serde_json = "^0.9"
toml = "^0.3.2"
